--- a/angularjs/package.json
+++ b/angularjs/package.json
@@ -1,12 +1,15 @@
 {
   "name": "angularjs",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "scripts": {
     "start": "http-server -a localhost -p 8000 -c-1 ./"
   },
   "devDependencies": {
     "http-server": "^0.12.3"
+  },
+  "dependencies": {
+    "angular-route": "1.8.0"
   }
 }
